Cleaned up build scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,9 @@
 cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
 project(NeuralNetwork LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
-add_subdirectory(src)
 
 # Download and unpack googletest at configure time
-configure_file(GoogleTest.CMakeLists.txt.in googletest-download/CMakeLists.txt)
+configure_file(external/GoogleTest/CMakeLists.txt.in googletest-download/CMakeLists.txt)
 execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
   RESULT_VARIABLE result
   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
@@ -35,8 +34,8 @@ if (CMAKE_VERSION VERSION_LESS 2.8.11)
   include_directories("${gtest_SOURCE_DIR}/include")
 endif()
 
-#add_subdirectory(test)
+
+add_subdirectory(src)
+
 enable_testing()
-add_executable(NeuralNetworkTests test/main.cpp)
-target_link_libraries(NeuralNetworkTests gtest)
-add_test(NAME NeuralNetworkTests COMMAND NeuralNetworkTests)
+add_subdirectory(test)
