--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
-#set(BOOST_DIR ../external/boost_1_69_0)
+set(HEADER_FILES ../inc/AddOper.h ../inc/Tensor.h)
+set(SOURCE_FILES AddOper.cpp)
 
-include_directories(../inc)
-#include_directories(${BOOST_DIR})
-
-add_library(NeuralNetwork AddOper.cpp)
+add_library(NeuralNetwork ${SOURCE_FILES} ${HEADER_FILES})
+target_include_directories(NeuralNetwork PUBLIC ../inc/)
+set_target_properties(NeuralNetwork PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/lib/)
